Prevent page refresh on form submit

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <input type="text" class="form-control" id="mapParamsAppKey" placeholder="PEDASI Application Key">
           </div>
           <div class="col">
-            <button type="submit" class="btn btn-primary" name="submit" onclick="populate_map()">Submit</button>
+            <button type="submit" class="btn btn-primary" name="submit" onclick="return populate_map()">Submit</button>
           </div>
         </div>
       </form>
